POST TYPE 自动生成菜单权限分配和菜单显示分站点显示优化

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ server {
             </div>
         </div>
 
-        <div class="section contact-us">
+        <div class="section contact-us" style="position: relative;">
             <div class="container">
                 <h2>CONTACT US</h2>
                 <p class="title">没什么胜利可言，挺住就意味着一切. -- 逍遥·李志亮</p>
@@ -293,12 +293,12 @@ server {
                 <p>181 8215 6697</p>
                 <p><a href="https://github.com/xiaoyao-work/TP-Admin">贡献代码</a> | <a href="javascript:void(0);" id="donate">捐赠一杯咖啡</a> | <a href="javascript:void(0);" id="license">商业授权</a></p>
             </div>
+            <footer class="footer" style="position: absolute; bottom: 0; text-align: center; width: 100%; padding: 10px 0;">
+                <section>All content copyright <a href="http://www.hhailuo.com">红海螺</a> © 2015 • All rights reserved. </section>
+            </footer>
         </div>
     </div>
     <div id="site-navbar" style="position: absolute; top: 51px; right: 0px; border: 0; z-index: 200;padding:0;margin:0;"><a href="https://github.com/xiaoyao-work/TP-Admin" title="fork me on github" style="background:none;" target="_blank"><img src="./Public/assets/images/home/git-fork.png" style="padding:0;margin:0;border:0; -webkit-box-shadow: none;-moz-box-shadow: none;box-shadow: none;"></a></div>
-    <footer class="footer" style="position: fixed; bottom: 0; text-align: center; width: 100%; padding: 10px 0;">
-        <section>All content copyright <a href="http://www.hhailuo.com">红海螺</a> © 2015 • All rights reserved. </section>
-    </footer>
     <script type="text/javascript" src="./Public/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="./Public/assets/js/jquery-ui.js"></script>
     <script type="text/javascript" src="./Public/assets/js/artdialog/dialog-min.js"></script>
